   used for numifying infinity.

 * Update author information.

 * Update information in the file README.

 * Remove the files INSTALL and LICENSE as this information is already covered
   in the file README.

 * Enable 'use warnings' in all modules. We require a Perl newer than 5.6.0
   anyway.

 * Replace 'use vars ...' with 'our ...'. We require a Perl newer than 5.6.0
   anyway.

 * Avoid indirect object syntax in documentation.

 * Moved 'Test::More' from 'build_requires' to 'test_requires' in Makefile.PL.

2015-11-03 v1.999708 pjacklam

 * Use bxxx() method names consistently, rather than mixing bxxx() and fxxx()
   in code and test files. The fxxx() methods for Math::BigFloat objects are
   still available through autoloading. However, we leave the fround() method
   in Math::BigInt, as it seems to provide some kind of compatibility with
   Math::BigFloat.

 * Correct author information in the README file.

 * Remove INSTALL file, which by accident wasn't removed in v1.999707.

 * Use present tense, not past tense, in CHANGES file.

 * Add '#!perl' to Makefile.PL for correct syntax highlighting in editors
   supporting this.

 * Use Math::Complex::Inf() in testfiles also (for generating Perl scalar
   infinity) since it is more portable.

2015-11-06 v1.999709 pjacklam

 * Represent and return zero as 0E0, not 0E1. The old POD said "A zero is
   represented and returned as 0E1, not 0E0 (after Knuth)." I find no
   references to Knuth ever having said this. The closest reference I can find
   is that Knuth says 0**0 should be defined to be 1, not 0, but that is
   something else than 0e0, which is 0*10**0. I have yet to see any other
   mathematical software that represents and returns zero as 0e1 rather than
   0e0.

 * Required version of Test::More is 0.9301.

Please send us test-reports, your experiences with this and your ideas - we love
to hear about our work!

The Math-BigInt developers <bignum@lists.scsys.co.uk>